--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 
     <div class="londing d-flex justify-content-center align-items-center">
         <div class="text-center text-light">
-            <!-- <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+           <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
             <lottie-player src="https://assets1.lottiefiles.com/packages/lf20_gn0tojcq.json" background="transparent"
-                speed="3" style="width: 400px; height: 400px;" loop autoplay></lottie-player> -->
+                speed="3" style="width: 400px; height: 400px;" loop autoplay></lottie-player>
             <h1>Welcome to the market</h1>
             <p class="fs-10 text-white-50 text-black-50  mb-5">From here begins the elegance of your children</p>
             <a href="#" class="btn  rounded-pill main-btn">Gt Started</a>
